Solved Spacing Issue

--- a/src/components/Scanner/Scanner.module.css
+++ b/src/components/Scanner/Scanner.module.css
@@ -28,7 +28,6 @@
   gap: 1rem;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
 }
 .text_input input {
   width: 100%;
